src/test/ui/pattern/issue-82290.stderr
error: `let` expressions are not supported here
  --> $DIR/issue-82290.rs:4:16
   |
LL |     if true && let x = 1 {
   |                ^^^^^^^^^
   |
   = note: only supported directly without parentheses in conditions of `if`- and `while`-expressions, as well as in `let` chains within parentheses

warning: the feature `let_chains` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-82290.rs:1:12
   |
LL | #![feature(let_chains)]
   |            ^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information

error: aborting due to previous error; 1 warning emitted

